--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,30 @@
+body {
+    background: url("../img/museofondo.jpg") no-repeat center center fixed;
+    background-size: cover;
+    margin: 0;
+}
+
+div {
+    float: left;
+}
+
 div.header-container {
     width:100%;
-    background-color: #e9e8e8;
+    margin-bottom: 1%;
+    background-color: rgba(113, 113, 113, 0.75);
+    color: white;
 }
+
 div.elements-container {
     width: 20%;
-    background-color: blue;
+    background-color: rgba(0, 15, 255, 0.35);
+    margin-right: 1%;
 }
 
 div.pictures-container {
-    width: 80%;
-    background-color: springgreen;
+    width: 79%;
+    background-color: rgba(241, 241, 241, 0.35);
+    box-shadow: 0 2px 21px 0 rgba(0,0,0,0.16),0 2px 22px 0 rgba(0,0,0,0.12)!important;
 }
 
 div.footer-container {
@@ -17,10 +32,7 @@ div.footer-container {
     text-align: center;
     background-color: black;
     color: white;
-}
-
-div {
-    float: left;
+    margin-top:1%;
 }
 
 div.cuerpo-container{
@@ -28,15 +40,16 @@ div.cuerpo-container{
 }
 
 .logo{
-    width: 50%;
+    width: 100%;
 }
 
 div.header-icon{
-    margin: 1%;
+    margin: 0.1%;
+    width: 11%;
 }
 
 .escudo-elemento{
-    width: 50%;
+    width: 100%;
 }
 
 div.header-title{
@@ -48,7 +61,9 @@ div.fila{
 }
 
 div.imagen-elemento{
-    text-align: center;
+    width: 40%;
+    display:block;
+    margin:auto;
 }
 
 div.informacion{
@@ -57,4 +72,13 @@ div.informacion{
 }
 .imagen-info{
     width: 100%;
+}
+
+div.elemento {
+    width: 33%;
+}
+
+div.nombre-elemento {
+    width: 100%;
+    text-align: center;
 }
