--- a/P2/styles/style.css
+++ b/P2/styles/style.css
@@ -20,7 +20,8 @@ div.header-container {
 }
 
 div.elements-container {
-    width: 20%;
+    /*width: 20%;     */
+    width: 15%;
     background-color: rgba(241, 241, 241, 0.7);
     box-shadow: 0 2px 21px 0 rgba(0,0,0,0.16),0 2px 22px 0 rgba(0,0,0,0.12)!important;
     margin-right: 1%;
@@ -95,13 +96,23 @@ div.elemento {
     width: fit-content;
 }
 
-div.informacion{
-    width: 74%;
+#informacion{
+    /*width: 74%;*/
+    /*con ventana de comentarios abierta width: 59%;*/
+    width: 79%;
     background-color: rgba(0, 0, 0, 0.82);
     color: white;
-    margin-right: 5%;
+   /* margin-right: 5%;*/
+    margin-right: 1%;
     font-family: 'Molengo';
+
+    transition:         height 1s ease, width 1s ease;
+    -moz-transition:    height 1s ease, width 1s ease;
+    -ms-transition:     height 1s ease, width 1s ease;
+    -o-transition:      height 1s ease, width 1s ease;
+    -webkit-transition: height 1s ease, width 1s ease;
 }
+
 
 div.texto{
     width: 90%;
@@ -142,7 +153,6 @@ a {
     font-size: 17px;
     border-bottom: 3px solid transparent;
 }
-
 
 /* selected link */
 a.active {
@@ -272,4 +282,177 @@ div.title-imprimir {
 
 div.header-imprimir{
     width: 100%;
+}
+
+
+/*COMENTARIOS*/
+
+#comentarios {
+    /*Tamaño expandido width: 24%;*/
+    width: 100%;
+    display:none;
+    background-color: rgba(241, 241, 241, 0.7);
+    box-shadow: 0 2px 21px 0 rgba(0,0,0,0.16),0 2px 22px 0 rgba(0,0,0,0.12)!important;
+}
+
+#contenedor-comentarios {
+    width: 4%;
+    background-color: rgba(241, 241, 241, 0.7);
+    box-shadow: 0 2px 21px 0 rgba(0,0,0,0.16),0 2px 22px 0 rgba(0,0,0,0.12)!important;
+    transition:         height 1s ease, width 1s ease;
+    -moz-transition:    height 1s ease, width 1s ease;
+    -ms-transition:     height 1s ease, width 1s ease;
+    -o-transition:      height 1s ease, width 1s ease;
+    -webkit-transition: height 1s ease, width 1s ease;
+}
+
+div.imagen-comentarios {
+    cursor: pointer;
+    width: 100%;
+}
+
+#icono-comentarios {
+    width: 100%;
+    max-width: 8vh;
+    max-height: 8vh;
+}
+
+div.comentario-usuario {
+    width: 90%;
+    float: left;
+    margin: 2%;
+    border: 2px solid #989898;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 3%;
+}
+
+div.mensaje-user {
+    width: 100%;
+    word-wrap:break-word;
+    max-width: 100%;
+}
+
+div.nombre-usuario{
+    vertical-align: middle;
+    text-align: center;
+}
+
+div.par {
+    background-color: #ddd;
+}
+
+div.par .user-img{
+    float:right;
+ }
+
+div.par  span{
+    float:left;
+}
+
+div.impar .nombre-usuario{
+    width: 100%;
+    text-align: center;
+}
+
+div.par .nombre-usuario{
+    width: 100%;
+    text-align: center;
+}
+
+.user-img {
+    width: 17%;
+    color: #1f77ad;
+    margin: 3% 5% 2% 3%;
+}
+
+.texto-user{
+    width: 73%;
+    margin:1%;
+}
+
+.user-img img{
+    width: 100%;
+}
+
+.time-right {
+    display: block;
+    float: right;
+    color: #aaa;
+}
+
+.time-left {
+    display: block;
+    float: left;
+    color: #999;
+}
+
+#back-comentarios {
+    width: 10%;
+}
+
+#back-icon{
+    width: 100%;
+    margin: 1% 0 0 5%;
+    cursor: pointer;
+}
+/* FORMULARIO DE COMENTARIOS */
+
+#input-nombre, #input-email, #input-email, #input-comentario , #input-send {
+    margin: 1%;
+}
+
+#input-nombre{
+    width: 25%;
+}
+
+#input-email{
+    width: 47%;
+}
+
+
+#input-comentario {
+    width: 90%;
+}
+
+#input-send {
+    width: 100%;
+}
+
+#comentarios-anteriores {
+    width: 100%;
+    overflow: scroll;
+    max-height: 350px;
+    overflow-x: hidden;
+}
+
+input[type=submit] {
+    background-color: #3179b9;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+}
+
+input[type=submit]:hover {
+    background-color: #29679e;
+}
+
+input[type=text], input[type=email], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+
+#error-message {
+    font-size: 14px;
+    width: 100%;
+    text-align: center;
+    color: red;
+    word-wrap: break-word;
+    display: none;
 }
